--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi Reproductor Spotify</title>
+  
+  <!-- Favicon config -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16">
+  <link rel="manifest" href="/icons/site.webmanifest">
+  <link rel="shortcut icon" href="/icons/favicon">
+  <meta name="theme-color" content="#121212">
+</head>
